# cli-chat

./: README.md  interface.py  pyproject.toml
client/: client.py
server/: server.py
